# ca-certificates-brazil

./: .gitignore  CMakeLists.txt  CPackLists.txt  README.md  changelog.txt  crt2bundle.sh  sources
.copr/: Makefile
.github/workflows/: auto-tag.yml  build-rpm.yml  ci.yml  fedora.yml
packaging/: pkg.spec.in
utils/: cert-tool
